fix(PTR): content overflow clip (#9881)

--- a/packages/vkui/src/components/PullToRefresh/PullToRefresh.module.css
+++ b/packages/vkui/src/components/PullToRefresh/PullToRefresh.module.css
@@ -75,6 +75,8 @@
   flex-grow: 1;
   flex-direction: column;
   overflow: hidden;
+  /* TODO [>=9]: использовать clip чтобы не создовать контекст контейнера прокрутки и не мешать sticky элементам */
+  overflow: clip;
   transition: transform 400ms var(--vkui--animation_easing_platform);
 }
 
